fixed small spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,14 +94,10 @@ p {
     display: flex;
 }
 
-#createohImg icebreakerImg catmemoryImg {
-    position: relative;
-}
-
 #catLink {
     position: absolute;
     writing-mode: vertical-rl;
-    right: 10px;
+    right: 5px;
     top: 1060px;
 }
 
